--- a/index.htm
+++ b/index.htm
@@ -44,6 +44,7 @@
 	}
 	setInterval(addClassesToElements, 300);
 </script>
+<link rel="stylesheet" href="/vrtx.css?v=1.0.0" />
 <script src="/vrtx.js?v=1.0.0" defer crossorigin></script>
 <script>
     window.addEventListener('load', () => {
